--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
        }
        div{
         display:none;
-        width:50%;
+        text-aign:center;
+        width:40%;
         height:20%;
-        font-size: 4em;
+        font-size: 4rem;
         color:#070A52;
         font-family: 'Satisfy', cursive;
        }
