--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <script>
     let d= new Date();
-    document.getElementById("demo").innerHTML="Date: "+d.getDate() + "  / "+d.getMonth()+" / "+d.getFullYear();
+    document.getElementById("demo").innerHTML="Date: "+d.getDate() + "  / "+(d.getMonth()+1)+" / "+d.getFullYear();
     function showDiv() {
         hide();
     function hide(){
