--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
        div{
         display:none;
         text-aign:center;
-        width:40%;
-        height:20%;
-        font-size: 3rem;
+        width:10em;
+        height:4em;
+        font-size: 3em;
         color:#070A52;
         font-family: 'Satisfy', cursive;
        }
