--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
        div{
         display:none;
         text-aign:center;
-        width:10em;
-        height:4em;
-        font-size: 3em;
+        width:10rem;
+        height:4rem;
+        font-size: 2rem;
         color:#070A52;
         font-family: 'Satisfy', cursive;
        }
